examples/test/testpolicy6943.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6943
  namespace: namespace66
spec:
  podSelector:
    matchLabels:
      key46: value27
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key13: value43
      podSelector:
        matchLabels:
          key10: value2
          key26: value26
          key30: value29
